MicroK8s-yaml/MicroK8s-Api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    svc: microk8-api-svc
  name: microk8-api-svc
  namespace: bdn-poc
spec:
  type: ClusterIP
  ports:
  - name: microk8-api-svc-port
    port: 80
    protocol: TCP
  selector:
    app: microk8sapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microk8-api-dep
  namespace: bdn-poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app : microk8sapi
  template:
    metadata:
      labels:
        app : microk8sapi  
    spec:
      containers:
        - name: microk8-api-dep-cnt
          image: localhost:32000/microk8sapi:registry
          imagePullPolicy: Always
          ports:
          - containerPort: 80
