MicroK8s-yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    svc: microk8-gateway-svc-nlb
  name: microk8-gateway-svc-nlb
  namespace: bdn-poc
spec:
  type: NodePort
  ports:
  - name: microk8-gateway-svc-port
    port: 80
    protocol: TCP
    nodePort: 30200
