MicroK8s-yaml/default-http-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    svc: default-http-backend-svc
  name: default-http-backend-svc
  namespace: bdn-poc
spec:
  type: ClusterIP
  ports:
  - name: default-http-backend-port
    port: 80
    protocol: TCP
  selector:
    app: default-http-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: default-http-backend
  name: default-http-backend
  namespace: bdn-poc
spec:
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      containers:
      - image: smpio/kube-default-http-backend
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: default-http-backend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
