MicroK8s-yaml/api-gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microk8-ingress
  namespace: bdn-poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: default-http-backend-svc
    servicePort: 8080
  rules:
  - http:
      paths:
      - path: /microk8sapi(/|$)(.*)
        backend:
          serviceName: microk8-api-svc
          servicePort: 80
      - path: /microk8sintraapi(/|$)(.*)
        backend:
          serviceName: microk8-api-intra-svc
          servicePort: 80
